Stylesheet/emote/tag updates 2015-10-28

--- a/minified-css/ponycountdown.css
+++ b/minified-css/ponycountdown.css
@@ -1,1 +1,1 @@
-a[href|="/countdown"]{display:block;clear:none;float:left;width:300px;height:60px;background-image:url("//a.thumbs.redditmedia.com/BEG4dXIs3UiKny9wr7dHTAQ94Dp56xNZQnXRcKvMI54.png")}
+a[href|="/countdown"]{display:block;clear:none;float:left;width:300px;height:60px;background-image:url("//b.thumbs.redditmedia.com/Ut6hO0e1WQBKA0S4zC3hKsr2_yOre0S89ETRA6ceOnY.png")}
