--- a/source-css/clopclop.css
+++ b/source-css/clopclop.css
@@ -138,6 +138,13 @@
         /* Switchy */
             .flair-switchy {
                 background-image: url(%%switchymark%%)}
+        /* FA_Mirror */
+            .flair-famirror {
+                background-image: url(%%famirror%%);
+                margin-top:-4px;
+                margin-bottom:-4px;
+                width: 24px;
+                height: 24px}
     /* RES Nightmode flair fix */
         .res-nightmode .tagline .flair {
             background-color: transparent !important}
