--- a/source-css/ponyanarchism.css
+++ b/source-css/ponyanarchism.css
@@ -22,7 +22,7 @@ a.author[href$="wintrparkgrl"] {
     letter-spacing: -20px
     }
 a.author[href$="wintrparkgrl"]:after {
-    content: "Master Wintr"  url(%%PaintFluttershysmall2%%);
+    content: "Captain wintrparkgrl"  ;
     font-size: 10px !important;
     visibility: visible !important;
     display: block;
