--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -1691,7 +1691,7 @@ a.thumbnail.self{margin-right:-14px}
 .thumbnail.default { background-position: 0 -70px !important }
 
 .linkflair-spoilers .thumbnail img,
-.linkflair-titlespoiler .thumbnail img { display: none }
+.linkflair-titlespoiler .thumbnail img { display: none !important }
 
 .linkflair-spoilers .thumbnail,
 .linkflair-titlespoiler .thumbnail {
