--- a/source-css/sweetie_belle.css
+++ b/source-css/sweetie_belle.css
@@ -130,6 +130,9 @@ body {
 .flair-sweetiebelle {
     background-position: 0px -78px;
     }
+.flair-sweetiebellecutiemark {
+    background-position: 0px -104px;
+    }
 
 
 /* Dictionary */
