--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -1165,7 +1165,29 @@ a[href="/s"]:hover::after { color: black }
 	.flair-cfwriter:hover { background-position: -294px -390px; height: 40px; min-width: 40px; text-indent: 41px;line-height:40px;} 
     .flair-cfcomicalt:hover{ background-position: -588px -580px; height: 40px; min-width: 40px; text-indent: 41px;line-height:40px;}
 
-
+    .flair-cfovermare{
+        background: url(%%cf-overmarev01%%);
+        background-repeat:no-repeat;
+        background-position: 0 -50px;
+        height:20px;
+        width:20px;
+    }
+    .flair-cfovermare:hover{
+        background: url(%%cf-overmarev01%%);
+        background-repeat:no-repeat;
+        height: 40px;
+        background-position: 0 0;
+        /*automatically change width to allow full text*/
+        width: auto;
+        /*set min width background-size width, otherwise image will display incorrectly*/
+        min-width: 40px;
+        /*this gives the hover window a plain grey background*/
+        background-color:#888;
+        line-height:40px;
+        /*For debugging porpoises, if text starts getting too comfy with the image set text-indent 1 pixel more than image size*/
+        text-indent: 41px;
+    }
+    
     /*automod flair for testing porpoises*/
     
     .flair-automod{
