--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -181,7 +181,7 @@ a[href="/sbsquint"]{
     background-image: url(%%sbsquint%%) !important
 }
 
-a[href="/hornymare"]{
+a[href="/hornymare"],a[href="/hornytwi"]{
     background-position: 0px 0px;
     Display: block;
     Clear: none;
